--- a/content/homepage.yaml
+++ b/content/homepage.yaml
@@ -4,8 +4,8 @@
     metaTitle: "Home Insurance Made Easy | Get a Quick Online Quote"
     metaLinkText: "Homepage Test"
     metaKeywords: null
-    pathPart: "homepage_test"
-    path: "/homepage_test/"
+    pathPart: "zesty_home"
+    path: "/"
     sitemapPriority: -2
     canonicalTagMode: 1
     canonicalQueryParamWhitelist: null
