--- a/content/homepage.yaml
+++ b/content/homepage.yaml
@@ -2,7 +2,7 @@
   web:
     metaDescription: "Kin Insurance offers easy, affordable homeowners insurance designed for your needs. Call today at 855-717-0022 or get an online quote now!"
     metaTitle: "Home Insurance Made Easy | Get a Quick Online Quote"
-    metaLinkText: "Homepage Test"
+    metaLinkText: "Homepage"
     metaKeywords: null
     pathPart: "zesty_home"
     path: "/"
